Made biIdiogram work both horizontally and vertically.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@178 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/TODO
+++ b/pkg/RCytoGPS/TODO
@@ -1,5 +1,7 @@
 1. Add an option to suppress labels in `plot1Chrom` so we can use it
-in `makeIdiogram`.
-. Add an option to suppress labels in `plot2Chrom` so we can use it
-in `biIdiogram`.
+   in `makeIdiogram`.
+2. Add an option to suppress labels in `plot2Chrom` so we can use it
+   in `biIdiogram`.
+3. Dexide what "horizontal" means and use it consistently. Is it the
+   orientation of the chromosome plot, or the direction of the bars?
 
