--- a/pkg/RCytoGPS/vignettes/RcytoGPS.Rmd
+++ b/pkg/RCytoGPS/vignettes/RcytoGPS.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Graphing Tools in RCytoGPS"
+title: "Graphing Cytoband Data with RCytoGPS"
 author: "Kevin R. Coombes"
 data: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -20,40 +20,47 @@ knitr::opts_chunk$set(fig.width=8, fig.height=5)
 library(RCytoGPS)
 data(cytoData)
 ls()
-summary(cytoData)
+colnames(cytoData)
+```
+
+```{r}
+bandData <- CytobandData(cytoData)
+class(bandData)
+summary(bandData)
 ```
 
 # Plotting Cytoband Data Along the Genome
 
 ```{r gb, fig.cap="Cytoband level data along the genome."}
 opar <- par(mfrow=c(2,1))
-genomeBarplot(cytoData$A.Loss, col="forestgreen")
-genomeBarplot(cytoData$B.Loss, col="orange")
+barplot(bandData, "A.Loss", col = "forestgreen")
+barplot(bandData, "B.Loss", col="orange")
 par(opar)
 ```
 
 # Single Chromosome Plots
 ## Plotting Cytoband-Level Data Along One Chromosome
-```{r v.plot2Chrom, fig.cap = "Stacked barplot of LGF frequencies on chromosome 3 for type A samples."}
-plot1Chrom(cytoData, colnames(cytoData)[4:6], chr = 3)
+```{r v.plot2Chrom, fig.cap = "Horizontal stacked barplot of LGF frequencies on chromosome 3 for type A samples."}
+Acolumns <- c("A.Loss", "A.Gain", "A.Fusion")
+image(bandData, what = Acolumns, chr = 3)
 ```
 
-```{r h.plot2Chrom, fig.cap = "Horizontal stacked barplot of LGF frequencies on chromosome 3 for type A samples."}
-plot1Chrom(cytoData, colnames(cytoData)[4:6], chr = 3, horiz = TRUE)
+```{r h.plot2Chrom, fig.cap = "Vertical stacked barplot of LGF frequencies on chromosome 3 for type A samples."}
+image(bandData, Acolumns, chr = 3, horiz = TRUE)
 ```
 
 ## Plotting Cytoband-Level Data Along Both Sides of One Chromosome
 ```{r v.plot1Chrom, fig.cap = "Stacked barplot of LGF frequencies on chromosome 13 for type A and B samples."}
-plot2Chrom(cytoData, "A.Loss", "B.Loss", chr = 13)
+image(bandData, what = list("A.Loss", "B.Loss"), chr = 13)
 ```
 
 ```{r h.plot1Chrom, fig.cap = "Horizontal stacked barplot of LGF frequencies on chromosome 13 for type A and B samples."}
-plot2Chrom(cytoData, "A.Loss", "B.Loss", chr = 13, horiz = TRUE)
+image(bandData, what = list("A.Loss", "B.Loss"), chr = 13, horiz = TRUE)
 ```
 
 ## Plotting LGF Summary Data Along One Chromosome
 
-```{r singles, fig.cap = "Barplot of LGF frequency data along chromosome 6."}
+```{r singles, eval=FALSE, echo=FALSE, fig.cap = "Barplot of LGF frequency data along chromosome 6."}
 singles(cytoData, c("A", "B", "C"), 6)
 ```
 
@@ -61,16 +68,32 @@ singles(cytoData, c("A", "B", "C"), 6)
 
 ## One Data Column
 ```{r makeid, fig.cap="Idiogram for one data columm."}
-makeIdiogram(cytoData, "A.Loss", "orange")
+image(bandData, what = "A.Loss", chr = "all", pal = "orange")
 ```
 
 ## Contrasting Two Data Columns
 ```{r biid, fig.cap="Idiogram to contrast two data columms."}
-biIdiogram(cytoData, "A.Loss", "A.Gain", pal=c("orange", "forestgreen"))
+image(bandData, what = list("A.Loss", "A.Gain"), chr = "all", 
+      pal=c("orange", "forestgreen"))
+```
+
+```{r biid3, fig.cap="Idiogram to contrast two data columms."}
+image(bandData, what = list("A.Loss", "A.Gain"), chr = "all", nrows = 3,
+      pal=c("orange", "forestgreen"))
+```
+
+```{r hbiid, fig.cap="Idiogram to contrast two data columms."}
+image(bandData, what = list("A.Loss", "A.Gain"), chr = "all", 
+      pal=c("orange", "forestgreen"), horiz = TRUE)
 ```
 
 ## Many Data Columns
 ```{r stackid, fig.cap="Idiogram for many data columns."}
-stackIdiogram(cytoData, paste(LETTERS[1:3], "Loss", sep="."),
-              pal=c("forestgreen", "orange", "purple"), nrows=3)
+image(bandData, what = paste(LETTERS[1:3], "Loss", sep="."), chr = "all", 
+              pal=c("forestgreen", "orange", "purple"), nrows=3, horiz = FALSE)
+```
+
+```{r hstackid, fig.cap="Idiogram for many data columns."}
+image(bandData, what = paste(LETTERS[1:3], "Loss", sep="."), chr = "all", 
+              pal=c("forestgreen", "orange", "purple"), nrows=3, horiz= TRUE)
 ```
