Fixed the bug with missing names on 'clusters' clot.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@196 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NEWS
+++ b/pkg/Mercator/NEWS
@@ -5,6 +5,12 @@
 	*						 *
 	**************************************************
 
+		CHANGES IN R VERSION 0.10.1
+
+BUG FIX
+
+    o	Fixed the bug with missing names on `clusters` slot. Again.
+
 		CHANGES IN R VERSION 0.10.0
 
 NEW FEATURES
