Added "significance" coloring to 'plot1Chrom' and 'makeIdiogram'. Still debugging 'legend' option to 'makeIdiogram'.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@201 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/vignettes/RcytoGPS.Rmd
+++ b/pkg/RCytoGPS/vignettes/RcytoGPS.Rmd
@@ -92,3 +92,8 @@ image(bandData, what = paste(LETTERS[1:3], "Loss", sep="."), chr = "all",
 image(bandData, what = paste(LETTERS[1:3], "Loss", sep="."), chr = "all", 
               pal=c("forestgreen", "orange", "purple"), nrows=3, horiz= TRUE)
 ```
+
+# Appendix
+```{r si}
+sessionInfo()
+```
