--- a/pkg/RCytoGPS/vignettes/DraftVignette.rmd
+++ b/pkg/RCytoGPS/vignettes/DraftVignette.rmd
@@ -2,10 +2,13 @@
 title: "Graphing Cytoband Data with RCytoGPS"
 author: "Dwayne Tally"
 date: "5/1/2020"
-output:
-  html_document: default
-  word_document: default
-  pdf_document: default
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{RCytoGPS}
+  %\VignetteKeywords{OOMPA,CytoGPS,karyotypes,idiograms,graphics}
+  %\VignetteDepends{RCytoGPS}
+  %\VignettePackage{RCytoGPS}
+  %\VignetteEngine{knitr::rmarkdown}
 ---
 DOWNLOAD UMPIRE FROM R FORGE
 
